--- a/AnExpressiveRoom/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/AnExpressiveRoom/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -132,6 +132,8 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
@@ -971,13 +973,19 @@ MRUItem3=/Game/StarterContent/Maps/StarterMap
 MRUItem4=/Game/EF_Edie/Maps/DemoMap
 MRUItem5=/Game/EF_Edie/Maps/Overview
 
+[DetailCustomWidgetExpansion]
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Feature Switches,MaterialEditorInstanceConstant.ParameterGroups.Material Settings,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
+MaterialInstanceConstant=
+
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem1=/Game/StarterContent/Maps/Advanced_Lighting
-MRUItem2=/Game/StarterContent/Maps/Minimal_Default
-MRUItem3=/Game/StarterContent/Maps/StarterMap
-MRUItem4=/Game/EF_Edie/Maps/DemoMap
-MRUItem5=/Game/EF_Edie/Maps/Overview
+MRUItem0=/Game/EF_Sam/Common/Materials/Wood/WM_WoodPlanksFloor_a_mat
+MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem2=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem3=/Game/StarterContent/Maps/Advanced_Lighting
+MRUItem4=/Game/StarterContent/Maps/Minimal_Default
+MRUItem5=/Game/StarterContent/Maps/StarterMap
+MRUItem6=/Game/EF_Edie/Maps/DemoMap
+MRUItem7=/Game/EF_Edie/Maps/Overview
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -1122,6 +1130,89 @@ SkeletalMeshComponent.VirtualTexture=True
 SkeletalMeshComponent.Tags=True
 SkeletalMeshComponent.Activation=True
 SkeletalMeshComponent.Cooking=True
+SkeletalMeshActor.TransformCommon=True
+SkeletalMeshActor.Animation=True
+SkeletalMeshActor.Mesh=True
+SkeletalMeshActor.Materials=True
+SkeletalMeshActor.Clothing=True
+SkeletalMeshActor.Physics=True
+SkeletalMeshActor.Collision=True
+SkeletalMeshActor.MasterPoseComponent=True
+SkeletalMeshActor.Lighting=True
+SkeletalMeshActor.ClothingSimulation=True
+SkeletalMeshActor.Rendering=True
+SkeletalMeshActor.SkinWeights=True
+SkeletalMeshActor.Navigation=True
+SkeletalMeshActor.VirtualTexture=True
+SkeletalMeshActor.Tags=True
+SkeletalMeshActor.Activation=True
+SkeletalMeshActor.Cooking=True
+SkeletalMeshActor.Replication=True
+SkeletalMeshActor.Input=True
+SkeletalMeshActor.Actor=True
+FirstPersonCharacter_C.Default=True
+FirstPersonCharacter_C.Tick=True
+K2Node_InputTouch.Input=True
+K2Node_InputAction.Input=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
+SkeletalMeshComponent.Variable=True
+SkeletalMeshComponent.Sockets=True
+SkeletalMeshComponent.ComponentReplication=True
+SkeletalMeshComponent.Events=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.Rendering=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=True
+SphereComponent.ComponentReplication=True
+SphereComponent.Cooking=True
+SphereComponent.Events=True
+MotionControllerComponent.Variable=True
+MotionControllerComponent.TransformCommon=True
+MotionControllerComponent.Sockets=True
+MotionControllerComponent.Physics=True
+MotionControllerComponent.Collision=True
+MotionControllerComponent.Lighting=True
+MotionControllerComponent.Rendering=True
+MotionControllerComponent.Navigation=True
+MotionControllerComponent.Visualization=True
+MotionControllerComponent.MotionController=True
+MotionControllerComponent.Tags=True
+MotionControllerComponent.ComponentReplication=True
+MotionControllerComponent.Activation=True
+MotionControllerComponent.Cooking=True
+MotionControllerComponent.Events=True
+MaterialMergeOptions.OutputMaterialSettings=True
+MaterialOptions.MeshSettings=True
+MaterialOptions.MaterialBakeSettings=True
+MaterialEditorInstanceConstant.ParameterGroups=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
+TextRenderActor.TransformCommon=True
+TextRenderActor.Materials=True
+TextRenderActor.Text=True
+TextRenderActor.Lighting=True
+TextRenderActor.Navigation=True
+TextRenderActor.Rendering=True
+TextRenderActor.Tags=True
+TextRenderActor.Cooking=True
+TextRenderActor.Replication=True
+TextRenderActor.Input=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1129,6 +1220,93 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
-RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Game/EF_FirstFloor/Meshes/CoffeeTable_a.CoffeeTable_a;
+RecentlyPlaced=/Game/EF_Barbra/Meshes/TrainOnTable_a.TrainOnTable_a;
+RecentlyPlaced=/Game/EF_FirstFloor/Meshes/table_kitchen_small_a.table_kitchen_small_a;
+RecentlyPlaced=/Game/EF_FirstFloor/Meshes/table_kitchen_a.table_kitchen_a;
+RecentlyPlaced=/Game/EF_FirstFloor/Shared/Hunger/BedsideTable_a.BedsideTable_a;
+RecentlyPlaced=/Game/StarterContent/Props/SM_TableRound.SM_TableRound;
+RecentlyPlaced=/Game/EF_Barbra/Meshes/SurpriseCoffeeTable.SurpriseCoffeeTable;
+RecentlyPlaced=/Game/EF_MollyGreg/Meshes/DiningTable_b.DiningTable_b;
+RecentlyPlaced=/Game/EF_FirstFloor/Shared/GenericPropsInterior/FoldableTable_a.FoldableTable_a;
+RecentlyPlaced=/Game/EF_Barbra/Meshes/BarbaraDeskDrawer_a.BarbaraDeskDrawer_a;
+RecentlyPlaced=/Game/EF_TwinsRoom/Meshes/SamFortDesk_a.SamFortDesk_a;
+RecentlyPlaced=/Game/EF_Barbra/Meshes/Desk_b.Desk_b;
+RecentlyPlaced=/Game/EF_Barbra/Meshes/Desk_a.Desk_a;
+RecentlyPlaced=/Game/EF_Edie/Meshes/WritingDesk_a.WritingDesk_a;
+RecentlyPlaced=/Game/EF_Edie/Meshes/SewingMachineDesk_a.SewingMachineDesk_a;
+RecentlyPlaced=/Game/EF_TwinsRoom/Meshes/TwinsRoomBed_a.TwinsRoomBed_a;
+RecentlyPlaced=/Game/EF_Sam/Meshes/SamRoomBed_a.SamRoomBed_a;
+RecentlyPlaced=/Game/EF_Barbra/Meshes/BarbaraBed_a.BarbaraBed_a;
+RecentlyPlaced=/Game/EF_Sam/Meshes/SamRoomFloor_a.SamRoomFloor_a;
+RecentlyPlaced=/Game/FirstPerson/Character/Mesh/SK_Mannequin_Arms_Skeleton.SK_Mannequin_Arms_Skeleton;
+
+[AssetEditorToolkitTabLocation]
+/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
+/Game/EF_Sam/Common/Materials/Wood/WM_WoodPlanksFloor_a_mat.WM_WoodPlanksFloor_a_mat=1
+
+[/Script/UnrealEd.BlueprintEditorOptions]
+bHideUnrelatedNodes=False
+
+[DetailCategoriesAdvanced]
+StaticMeshActor.Materials=False
+
+[MaterialInstanceEditor]
+bShowGrid=False
+bDrawGrid=False
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
 
