Changed wood textures; Built lighting

--- a/AnExpressiveRoom/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/AnExpressiveRoom/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -973,19 +973,25 @@ MRUItem3=/Game/StarterContent/Maps/StarterMap
 MRUItem4=/Game/EF_Edie/Maps/DemoMap
 MRUItem5=/Game/EF_Edie/Maps/Overview
 
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
+
 [DetailCustomWidgetExpansion]
-MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Feature Switches,MaterialEditorInstanceConstant.ParameterGroups.Material Settings,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Feature Switches,MaterialEditorInstanceConstant.ParameterGroups.Material Settings,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Static Switch Parameter Values,
 MaterialInstanceConstant=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/EF_Sam/Common/Materials/Wood/WM_WoodPlanksFloor_a_mat
-MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem2=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem3=/Game/StarterContent/Maps/Advanced_Lighting
-MRUItem4=/Game/StarterContent/Maps/Minimal_Default
-MRUItem5=/Game/StarterContent/Maps/StarterMap
-MRUItem6=/Game/EF_Edie/Maps/DemoMap
-MRUItem7=/Game/EF_Edie/Maps/Overview
+MRUItem0=/Game/EF_Barbra/Shared/TheresaRoom/HospitalBed/VeneerWood_a_Mat
+MRUItem1=/Game/EF_Sam/Common/Materials/Wood/WM_WoodPlanksFloor_a_mat
+MRUItem2=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem3=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem4=/Game/StarterContent/Maps/Advanced_Lighting
+MRUItem5=/Game/StarterContent/Maps/Minimal_Default
+MRUItem6=/Game/StarterContent/Maps/StarterMap
+MRUItem7=/Game/EF_Edie/Maps/DemoMap
+MRUItem8=/Game/EF_Edie/Maps/Overview
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -1250,8 +1256,8 @@ Light.Actor=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume=
+Brush=
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" "
 
 [PlacementMode]
@@ -1279,6 +1285,7 @@ RecentlyPlaced=/Game/EF_Sam/Meshes/Scene_1_sky.Scene_1_sky;
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
 /Game/EF_Sam/Common/Materials/Wood/WM_WoodPlanksFloor_a_mat.WM_WoodPlanksFloor_a_mat=1
+/Game/EF_Barbra/Shared/TheresaRoom/HospitalBed/VeneerWood_a_Mat.VeneerWood_a_Mat=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -1287,9 +1294,9 @@ bHideUnrelatedNodes=False
 StaticMeshActor.Materials=False
 
 [MaterialInstanceEditor]
-bShowGrid=False
+bShowGrid=True
 bDrawGrid=False
-PrimType=1
+PrimType=4
 
 [/Script/UnrealEd.MaterialStatsOptions]
 bPlatformUsed[0]=1
