--- a/AnExpressiveRoom/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/AnExpressiveRoom/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -134,9 +134,11 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+LastLevel=/Game/AnExpressiveRoom
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -966,12 +968,13 @@ HierarchicalLODOutliner.TimeStamp=2020.07.01-17.34.24
 HierarchicalLODOutliner.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem1=/Game/StarterContent/Maps/Advanced_Lighting
-MRUItem2=/Game/StarterContent/Maps/Minimal_Default
-MRUItem3=/Game/StarterContent/Maps/StarterMap
-MRUItem4=/Game/EF_Edie/Maps/DemoMap
-MRUItem5=/Game/EF_Edie/Maps/Overview
+MRUItem0=/Game/AnExpressiveRoom
+MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem2=/Game/StarterContent/Maps/Advanced_Lighting
+MRUItem3=/Game/StarterContent/Maps/Minimal_Default
+MRUItem4=/Game/StarterContent/Maps/StarterMap
+MRUItem5=/Game/EF_Edie/Maps/DemoMap
+MRUItem6=/Game/EF_Edie/Maps/Overview
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -981,6 +984,7 @@ OnlyBuildVisibility=False
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Feature Switches,MaterialEditorInstanceConstant.ParameterGroups.Material Settings,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Static Switch Parameter Values,
 MaterialInstanceConstant=
+StaticMeshActor=StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 
 [ContentBrowserRecent]
 MRUItem0=/Game/EF_Barbra/Shared/TheresaRoom/HospitalBed/VeneerWood_a_Mat
@@ -1253,14 +1257,19 @@ RectLight.Actor=True
 Light.TransformCommon=True
 Light.Rendering=True
 Light.Actor=True
+StaticMeshActor.Mobile=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume=
 Brush=
-StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" "
+StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
+RecentlyPlaced=/Game/EF_Barbra/Meshes/BarbaraCeilingLight.BarbaraCeilingLight;
+RecentlyPlaced=/Game/EF_Barbra/Meshes/BasementStairwellLight_a.BasementStairwellLight_a;
+RecentlyPlaced=/Game/EF_Barbra/Meshes/CeilingLightTrack.CeilingLightTrack;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Chair.SM_Chair;
 RecentlyPlaced=/Game/EF_FirstFloor/Meshes/StairLift_Chair.StairLift_Chair;
 RecentlyPlaced=/Game/EF_FirstFloor/Shared/GenericPropsInterior/ClothesHanger_a.ClothesHanger_a;
@@ -1277,10 +1286,6 @@ RecentlyPlaced=/Game/StarterContent/Props/SM_Lamp_Wall.SM_Lamp_Wall;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/EF_Barbra/Meshes/CrescentLamp.CrescentLamp;
 RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
-RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
-RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
-RecentlyPlaced=/Game/EF_Sam/Textures/SelfPortraitScene4sky_bc.SelfPortraitScene4sky_bc;
-RecentlyPlaced=/Game/EF_Sam/Meshes/Scene_1_sky.Scene_1_sky;
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
