Fixed the spotlights; baked lighting

--- a/AnExpressiveRoom/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/AnExpressiveRoom/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1266,6 +1266,7 @@ Brush=
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Game/EF_Barbra/Meshes/BarbaraCeilingLight.BarbaraCeilingLight;
 RecentlyPlaced=/Game/EF_Barbra/Meshes/BasementStairwellLight_a.BasementStairwellLight_a;
@@ -1285,7 +1286,6 @@ RecentlyPlaced=/Game/EF_FirstFloor/Shared/Floor4/ThomasRoom/WallMountedTv/WallMo
 RecentlyPlaced=/Game/StarterContent/Props/SM_Lamp_Wall.SM_Lamp_Wall;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/EF_Barbra/Meshes/CrescentLamp.CrescentLamp;
-RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
@@ -1356,4 +1356,7 @@ bPlatformUsed[48]=0
 bMaterialQualityUsed[0]=0
 bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
+
+[MessageLog]
+LastLogListing=LightingResults
 
