--- a/ArtAssignment/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ArtAssignment/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -70,6 +70,15 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
+[/Script/UnrealEd.MaterialEditorOptions]
+bShowGrid=False
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
+[ContentBrowser]
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
+
 [EditorStartup]
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
@@ -77,8 +86,10 @@ LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 CleanShutdown=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
-MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem0=/Game/Materials/LogicalArea/RoomsInside
+MRUItem1=/Game/Materials/LogicalWall
+MRUItem2=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
+MRUItem3=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
 
 [DetailCategories]
 FirstPersonCharacter_C.Default=True
@@ -143,11 +154,357 @@ FirstPersonHUD_C.Tick=True
 FirstPersonHUD_C.Default=True
 FirstPersonHUD_C.HUD=True
 FirstPersonHUD_C.Collision=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Actor=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Replication=True
+BP_Sky_Sphere_C.Collision=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
+FirstPersonCharacter_C.TransformCommon=True
+FirstPersonCharacter_C.Animation=True
+FirstPersonCharacter_C.Mesh=True
+FirstPersonCharacter_C.Clothing=True
+FirstPersonCharacter_C.Physics=True
+FirstPersonCharacter_C.MasterPoseComponent=True
+FirstPersonCharacter_C.Lighting=True
+FirstPersonCharacter_C.ClothingSimulation=True
+FirstPersonCharacter_C.SkinWeights=True
+FirstPersonCharacter_C.Navigation=True
+FirstPersonCharacter_C.VirtualTexture=True
+FirstPersonCharacter_C.Tags=True
+FirstPersonCharacter_C.Activation=True
+FirstPersonCharacter_C.Cooking=True
+FirstPersonCharacter_C.Character Movement (General Settings)=True
+FirstPersonCharacter_C.Character Movement: Walking=True
+FirstPersonCharacter_C.Character Movement: Jumping / Falling=True
+FirstPersonCharacter_C.Character Movement (Networking)=True
+FirstPersonCharacter_C.Character Movement: Swimming=True
+FirstPersonCharacter_C.Character Movement: Flying=True
+FirstPersonCharacter_C.Character Movement: Custom Movement=True
+FirstPersonCharacter_C.Character Movement (Rotation Settings)=True
+FirstPersonCharacter_C.Character Movement: Physics Interaction=True
+FirstPersonCharacter_C.Character Movement=True
+FirstPersonCharacter_C.Character Movement: Avoidance=True
+FirstPersonCharacter_C.RootMotion=True
+FirstPersonCharacter_C.Character Movement: NavMesh Movement=True
+FirstPersonCharacter_C.NavMovement=True
+FirstPersonCharacter_C.Velocity=True
+FirstPersonCharacter_C.PlanarMovement=True
+FirstPersonCharacter_C.MovementComponent=True
+FirstPersonCharacter_C.Shape=True
+Brush.TransformCommon=True
+Brush.BrushSettings=True
+Brush.Replication=True
+Brush.Actor=True
+Brush.Surface Materials=True
+Brush.Geometry=True
+Brush.Surface Properties=True
+LightmassPrimitiveSettingsObject.Lightmass=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+Actor.TransformCommon=True
+Actor.Replication=True
+Actor.Actor=True
+Generic.Surface Materials=True
+Generic.Geometry=True
+Generic.Surface Properties=True
+SphereReflectionCapture.TransformCommon=True
+SphereReflectionCapture.ReflectionCapture=True
+SphereReflectionCapture.Rendering=True
+SphereReflectionCapture.Tags=True
+SphereReflectionCapture.Cooking=True
+SphereReflectionCapture.Replication=True
+SphereReflectionCapture.Input=True
+EditorStyleSettings.UserInterface=True
+EditorStyleSettings.Accessibility=True
+EditorStyleSettings.Colors=True
+EditorStyleSettings.Graphs=True
+EditorStyleSettings.Output Log=True
+EditorExperimentalSettings.HDR=True
+EditorExperimentalSettings.Foliage=True
+EditorExperimentalSettings.Tools=True
+EditorExperimentalSettings.UserInterface=True
+EditorExperimentalSettings.Blueprints=True
+EditorExperimentalSettings.Cooking=True
+EditorExperimentalSettings.AI=True
+EditorExperimentalSettings.PIE=True
+EditorExperimentalSettings.LightingBuilds=True
+EditorExperimentalSettings.Core=True
+EditorExperimentalSettings.Materials=True
+EditorExperimentalSettings.Content Browser=True
+EditorSettings.DerivedData=True
+EditorKeyboardShortcutSettings.AdvancedPreviewScene=True
+EditorKeyboardShortcutSettings.AnimGraph=True
+EditorKeyboardShortcutSettings.AnimSequenceCurveEditor=True
+EditorKeyboardShortcutSettings.AssetEditor=True
+EditorKeyboardShortcutSettings.LoadingProfilerCommand=True
+EditorKeyboardShortcutSettings.AssetManagerEditorCommands=True
+EditorKeyboardShortcutSettings.BlueprintDebugger=True
+EditorKeyboardShortcutSettings.BlueprintEditor=True
+EditorKeyboardShortcutSettings.BlueprintEditorSpawnNodes=True
+EditorKeyboardShortcutSettings.CameraShakePreviewer=True
+EditorKeyboardShortcutSettings.ClothPainterTools=True
+EditorKeyboardShortcutSettings.ClothPainter=True
+EditorKeyboardShortcutSettings.SequenceRecorder.Common=True
+EditorKeyboardShortcutSettings.GenericCommands=True
+EditorKeyboardShortcutSettings.WidgetDesigner=True
+EditorKeyboardShortcutSettings.EditorViewport=True
+EditorKeyboardShortcutSettings.ContentBrowser=True
+EditorKeyboardShortcutSettings.GenericCurveEditor=True
+EditorKeyboardShortcutSettings.CurveEditorTools=True
+EditorKeyboardShortcutSettings.TabCommands=True
+EditorKeyboardShortcutSettings.BlueprintFavoritesPalette=True
+EditorKeyboardShortcutSettings.FoliageEditMode=True
+EditorKeyboardShortcutSettings.FullBlueprintEditor=True
+EditorKeyboardShortcutSettings.GraphEditor=True
+EditorKeyboardShortcutSettings.InsightsCommands=True
+EditorKeyboardShortcutSettings.LandscapeEditor=True
+EditorKeyboardShortcutSettings.LayersView=True
+EditorKeyboardShortcutSettings.LevelEditor=True
+EditorKeyboardShortcutSettings.LevelEditorModes=True
+EditorKeyboardShortcutSettings.LevelSequenceEditor=True
+EditorKeyboardShortcutSettings.LevelViewport=True
+EditorKeyboardShortcutSettings.BlueprintLibraryPalette=True
+EditorKeyboardShortcutSettings.MainFrame=True
+EditorKeyboardShortcutSettings.MaterialEditor=True
+EditorKeyboardShortcutSettings.MaterialEditorSpawnNodes=True
+EditorKeyboardShortcutSettings.MediaPlayerEditor=True
+EditorKeyboardShortcutSettings.MeshPainter=True
+EditorKeyboardShortcutSettings.MeshPaint=True
+EditorKeyboardShortcutSettings.MeshPaintingTools=True
+EditorKeyboardShortcutSettings.MyBlueprint=True
+EditorKeyboardShortcutSettings.NetworkingProfilerCommand=True
+EditorKeyboardShortcutSettings.NiagaraEditor=True
+EditorKeyboardShortcutSettings.BlueprintPalette=True
+EditorKeyboardShortcutSettings.PersonaCommon=True
+EditorKeyboardShortcutSettings.PlayWorld=True
+EditorKeyboardShortcutSettings.RayTracingDebugVisualizationMenu=True
+EditorKeyboardShortcutSettings.VisualizationMenu=True
+EditorKeyboardShortcutSettings.SCSEditorViewport=True
+EditorKeyboardShortcutSettings.Sequencer=True
+EditorKeyboardShortcutSettings.ShowFlagsMenu=True
+EditorKeyboardShortcutSettings.SplineComponentVisualizer=True
+EditorKeyboardShortcutSettings.StandardToolCommands=True
+EditorKeyboardShortcutSettings.SteamVREditor=True
+EditorKeyboardShortcutSettings.SystemWideCommands=True
+EditorKeyboardShortcutSettings.TimingProfilerCommand=True
+EditorKeyboardShortcutSettings.NUTLogWidget=True
+EditorKeyboardShortcutSettings.EditorViewportClient=True
+EditorKeyboardShortcutSettings.VisualLogger=True
+LiveCodingSettings.General=True
+LiveCodingSettings.Modules=True
+EditorLoadingSavingSettings.Startup=True
+EditorLoadingSavingSettings.AutoReimport=True
+EditorLoadingSavingSettings.Blueprints=True
+EditorLoadingSavingSettings.AutoSave=True
+EditorLoadingSavingSettings.SourceControl=True
+EditorPerProjectUserSettings.DeveloperTools=True
+EditorPerProjectUserSettings.AI=True
+EditorPerProjectUserSettings.SimplygonSwarm=True
+EditorPerProjectUserSettings.HotReload=True
+EditorPerProjectUserSettings.Import=True
+EditorPerProjectUserSettings.Export=True
+EditorPerProjectUserSettings.UnrealAutomationTool=True
+EditorPerformanceSettings.EditorPerformance=True
+InternationalizationSettingsModel.Internationalization=True
+InternationalizationSettingsModel.Time=True
+SourceCodeAccessSettings.Accessor=True
+EditorTutorialSettings.Tutorials=True
+VRModeSettings.General=True
+VRModeSettings.Cinematics=True
+VRModeSettings.World Movement=True
+VRModeSettings.UI Customization=True
+VRModeSettings.Motion Controllers=True
+LevelEditorMiscSettings.Editing=True
+LevelEditorMiscSettings.Sound=True
+LevelEditorMiscSettings.Levels=True
+LevelEditorMiscSettings.Screenshots=True
+LevelEditorPlaySettings.PlayInEditor=True
+LevelEditorPlaySettings.GameViewportSettings=True
+LevelEditorPlaySettings.PlayInNewWindow=True
+LevelEditorPlaySettings.PlayInStandaloneGame=True
+LevelEditorPlaySettings.Multiplayer Options=True
+LevelEditorPlaySettings.PlayOnDevice=True
+OnlinePIESettings.Logins=True
+LevelEditorViewportSettings.Controls=True
+LevelEditorViewportSettings.LookAndFeel=True
+LevelEditorViewportSettings.GridSnapping=True
+LevelEditorViewportSettings.Preview=True
+PersonaOptions.Preview Scene=True
+PersonaOptions.Viewport=True
+PersonaOptions.Audio=True
+PersonaOptions.Composites and Montages=True
+PersonaOptions.Skeleton Tree=True
+PersonaOptions.Mesh=True
+PersonaOptions.Asset Browser=True
+BlueprintEditorSettings.VisualStyle=True
+BlueprintEditorSettings.Workflow=True
+BlueprintEditorSettings.Compiler=True
+BlueprintEditorSettings.DeveloperTools=True
+BlueprintEditorSettings.Performance=True
+ContentBrowserSettings.ContentBrowser=True
+CurveEditorSettings.Curve Editor=True
+SequencerSettings.Keyframing=True
+SequencerSettings.General=True
+SequencerSettings.Timeline=True
+SequencerSettings.Snapping=True
+SequencerSettings.CurveEditor=True
+SequencerSettings.Playback=True
+FlipbookEditorSettings.Background=True
+GraphEditorSettings.GeneralStyle=True
+GraphEditorSettings.Splines=True
+GraphEditorSettings.PinColors=True
+GraphEditorSettings.NodeTitleColors=True
+GraphEditorSettings.Tracing=True
+MaterialEditorSettings.Offline Shader Compilers=True
+MaterialEditorSettings.User Interface Domain=True
+MeshPaintSettings.Visualization=True
+SkeletalMeshEditorSettings.AnimationPreview=True
+SpriteEditorSettings.Background=True
+TileMapEditorSettings.Background=True
+TileMapEditorSettings.Grid=True
+TileSetEditorSettings.Background=True
+TileSetEditorSettings.Tile Editor=True
+TileSetEditorSettings.Tile Sheet Conditioning=True
+WidgetDesignerSettings.GridSnapping=True
+WidgetDesignerSettings.Dragging=True
+WidgetDesignerSettings.Visuals=True
+WidgetDesignerSettings.Interaction=True
+CrashReportsPrivacySettings.Options=True
+AnalyticsPrivacySettings.Options=True
+AutomationTestSettings.Loading=True
+AutomationTestSettings.Automation=True
+AutomationTestSettings.Open Asset Tests=True
+AutomationTestSettings.MiscAutomationSetups=True
+AutomationTestSettings.ExternalTools=True
+AutomationTestSettings.Screenshots=True
+CrashReporterSettings.CrashReporter=True
+DataValidationSettings.Validation Scenarios=True
+LogVisualizerSettings.VisualLogger=True
+Brush.LOD=False
+Brush.Cooking=False
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
 /Game/FirstPersonBP/Blueprints/FirstPersonHUD.FirstPersonHUD=1
+/Game/Materials/LogicalWall.LogicalWall=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
+
+[DetailPropertyExpansion]
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
+Object=
+CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
+AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+
+[PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+
+[DetailCategoriesAdvanced]
+Brush.BrushSettings=True
+
+[DetailMultiObjectNodeExpansion]
+EditorStyleSettings=True
+EditorPerProjectUserSettings=True
+LevelEditorMiscSettings=True
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
+
+[MessageLog]
+LastLogListing=MapCheck
 
