Made hallway longer, added emotional room, started on symmetric room, built lighting

--- a/ArtAssignment/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ArtAssignment/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,6 +71,7 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [/Script/UnrealEd.MaterialEditorOptions]
+bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
@@ -85,12 +86,23 @@ LastLevel=/Game/ArtAssignment
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Materials/EmotionalArea/blueGlowStairs.blueGlowStairs
+OpenAssetsAtExit=/Game/Materials/EmotionalArea/redGlowStairs.redGlowStairs
+OpenAssetsAtExit=/Game/Materials/EmotionalArea/Glowing.Glowing
+OpenAssetsAtExit=/Game/Materials/EmotionalArea/BadSphere.BadSphere
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/LogicalArea/RoomsInside
-MRUItem1=/Game/Materials/LogicalWall
-MRUItem2=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
-MRUItem3=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem0=/Game/Materials/EmotionalArea/Glowing
+MRUItem1=/Game/Materials/EmotionalArea/GoodSphere
+MRUItem2=/Game/Materials/EmotionalArea/BadSphere
+MRUItem3=/Game/Materials/EmotionalArea/GlowingStairs
+MRUItem4=/Game/Materials/EmotionalArea/redGlowStairs
+MRUItem5=/Game/Materials/EmotionalArea/blueGlowStairs
+MRUItem6=/Game/Materials/EmotionalArea/DarkRoom
+MRUItem7=/Game/Materials/LogicalArea/RoomsInside
+MRUItem8=/Game/Materials/LogicalWall
+MRUItem9=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
+MRUItem10=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
 
 [DetailCategories]
 FirstPersonCharacter_C.Default=True
@@ -442,12 +454,57 @@ DirectionalLight.RayTracing=True
 DirectionalLight.Tags=True
 DirectionalLight.Cooking=True
 DirectionalLight.Actor=True
+LightmassImportanceVolume.TransformCommon=True
+LightmassImportanceVolume.Replication=True
+LightmassImportanceVolume.BrushSettings=True
+LightmassImportanceVolume.Actor=True
+PostProcessVolume.TransformCommon=True
+PostProcessVolume.Lens=True
+PostProcessVolume.Color Grading=True
+PostProcessVolume.Film=True
+PostProcessVolume.Rendering Features=True
+PostProcessVolume.PostProcessVolumeSettings=True
+PostProcessVolume.Replication=True
+PostProcessVolume.BrushSettings=True
+PostProcessVolume.Actor=True
+Volume.TransformCommon=True
+Volume.Replication=True
+Volume.BrushSettings=True
+Volume.Actor=True
+MaterialExpressionVectorNoise.MaterialExpressionVectorNoise=True
+MaterialExpressionVectorNoise.MaterialExpression=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionScalarParameter.CustomPrimitiveData=True
+MaterialEditorInstanceConstant.ParameterGroups=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
+RectLight.TransformCommon=True
+RectLight.Light=True
+RectLight.Rendering=True
+RectLight.Lightmass=True
+RectLight.Performance=True
+RectLight.LightFunction=True
+RectLight.Light Profiles=True
+RectLight.DistanceFieldShadows=True
+RectLight.RayTracing=True
+RectLight.Tags=True
+RectLight.Cooking=True
+RectLight.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
 /Game/FirstPersonBP/Blueprints/FirstPersonHUD.FirstPersonHUD=1
 /Game/Materials/LogicalWall.LogicalWall=1
 /Game/Materials/LogicalArea/RoomsInside.RoomsInside=1
+/Game/Materials/EmotionalArea/DarkRoom.DarkRoom=1
+/Game/Materials/EmotionalArea/GlowingStairs.GlowingStairs=1
+/Game/Materials/EmotionalArea/redGlowStairs.redGlowStairs=1
+/Game/Materials/EmotionalArea/blueGlowStairs.blueGlowStairs=1
+/Game/Materials/EmotionalArea/Glowing.Glowing=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -458,6 +515,9 @@ EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Obj
 Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
+PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume=
+MaterialEditorInstanceConstant=
 
 [MaterialEditor]
 PrimType=1
@@ -517,6 +577,7 @@ bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 
@@ -537,6 +598,15 @@ OnlyBuildSelected=False
 OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
+[DetailCustomWidgetExpansion]
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
+MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
+
 [MessageLog]
 LastLogListing=LightingResults
+
+[MaterialInstanceEditor]
+bShowGrid=True
+bDrawGrid=False
+PrimType=1
 
