Changed when symmetry and emotional area start. added faces for emotional

--- a/ArtAssignment/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ArtAssignment/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -88,21 +88,23 @@ LastLevel=/Game/ArtAssignment
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Materials/EmotionalArea/blueGlowStairs.blueGlowStairs
 OpenAssetsAtExit=/Game/Materials/EmotionalArea/redGlowStairs.redGlowStairs
+OpenAssetsAtExit=/Game/Materials/EmotionalArea/GoodSphere.GoodSphere
 OpenAssetsAtExit=/Game/Materials/EmotionalArea/Glowing.Glowing
 OpenAssetsAtExit=/Game/Materials/EmotionalArea/BadSphere.BadSphere
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/EmotionalArea/Glowing
-MRUItem1=/Game/Materials/EmotionalArea/GoodSphere
-MRUItem2=/Game/Materials/EmotionalArea/BadSphere
-MRUItem3=/Game/Materials/EmotionalArea/GlowingStairs
-MRUItem4=/Game/Materials/EmotionalArea/redGlowStairs
-MRUItem5=/Game/Materials/EmotionalArea/blueGlowStairs
-MRUItem6=/Game/Materials/EmotionalArea/DarkRoom
-MRUItem7=/Game/Materials/LogicalArea/RoomsInside
-MRUItem8=/Game/Materials/LogicalWall
-MRUItem9=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
-MRUItem10=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem0=/Game/Materials/Symmetric/LightRoom
+MRUItem1=/Game/Materials/EmotionalArea/Glowing
+MRUItem2=/Game/Materials/EmotionalArea/GoodSphere
+MRUItem3=/Game/Materials/EmotionalArea/BadSphere
+MRUItem4=/Game/Materials/EmotionalArea/GlowingStairs
+MRUItem5=/Game/Materials/EmotionalArea/redGlowStairs
+MRUItem6=/Game/Materials/EmotionalArea/blueGlowStairs
+MRUItem7=/Game/Materials/EmotionalArea/DarkRoom
+MRUItem8=/Game/Materials/LogicalArea/RoomsInside
+MRUItem9=/Game/Materials/LogicalWall
+MRUItem10=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
+MRUItem11=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
 
 [DetailCategories]
 FirstPersonCharacter_C.Default=True
@@ -427,8 +429,8 @@ AutomationTestSettings.Screenshots=True
 CrashReporterSettings.CrashReporter=True
 DataValidationSettings.Validation Scenarios=True
 LogVisualizerSettings.VisualLogger=True
-Brush.LOD=False
-Brush.Cooking=False
+Brush.LOD=True
+Brush.Cooking=True
 PointLight.TransformCommon=True
 PointLight.Light=True
 PointLight.Rendering=True
@@ -583,6 +585,7 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 
 [DetailCategoriesAdvanced]
 Brush.BrushSettings=True
+Brush.Actor=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
