Added asymmetric area, starting on interesting area

--- a/ArtAssignment/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ArtAssignment/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,9 +71,9 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [/Script/UnrealEd.MaterialEditorOptions]
-bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bRealtimeMaterialViewport=False
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -86,11 +86,6 @@ LastLevel=/Game/ArtAssignment
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Materials/EmotionalArea/blueGlowStairs.blueGlowStairs
-OpenAssetsAtExit=/Game/Materials/EmotionalArea/redGlowStairs.redGlowStairs
-OpenAssetsAtExit=/Game/Materials/EmotionalArea/GoodSphere.GoodSphere
-OpenAssetsAtExit=/Game/Materials/EmotionalArea/Glowing.Glowing
-OpenAssetsAtExit=/Game/Materials/EmotionalArea/BadSphere.BadSphere
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Materials/Symmetric/LightRoom
@@ -507,6 +502,9 @@ RectLight.Actor=True
 /Game/Materials/EmotionalArea/redGlowStairs.redGlowStairs=1
 /Game/Materials/EmotionalArea/blueGlowStairs.blueGlowStairs=1
 /Game/Materials/EmotionalArea/Glowing.Glowing=1
+/Game/Materials/EmotionalArea/BadSphere.BadSphere=1
+/Game/Materials/EmotionalArea/GoodSphere.GoodSphere=1
+/Game/Materials/Symmetric/LightRoom.LightRoom=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -603,13 +601,13 @@ OnlyBuildVisibility=False
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
-MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
+MaterialInstanceConstant=
 
 [MessageLog]
 LastLogListing=LightingResults
 
 [MaterialInstanceEditor]
-bShowGrid=True
+bShowGrid=False
 bDrawGrid=False
 PrimType=1
 
