--- a/ArtAssignment/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ArtAssignment/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,6 +71,7 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [/Script/UnrealEd.MaterialEditorOptions]
+bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 bRealtimeMaterialViewport=False
@@ -80,6 +81,12 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
+GlobalAssetPicker.ActiveTypeFilters=
+GlobalAssetPicker.EnabledTypeFilters=
+GlobalAssetPicker.ActiveFrontendFilters=
+GlobalAssetPicker.EnabledFrontendFilters=
+GlobalAssetPicker.ThumbnailSizeScale=0.100000
+GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/ArtAssignment
@@ -506,6 +513,7 @@ RectLight.Actor=True
 /Game/Materials/EmotionalArea/BadSphere.BadSphere=1
 /Game/Materials/EmotionalArea/GoodSphere.GoodSphere=1
 /Game/Materials/Symmetric/LightRoom.LightRoom=1
+/Game/Materials/Interesting/Spheres.Spheres=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
