Added planes for cobblestone path and grass; fixed the smog

--- a/ColorAndLight/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ColorAndLight/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -73,36 +73,56 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 [MRU]
 MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
+[/Script/UnrealEd.MaterialEditorOptions]
+bShowGrid=False
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
 [LightingBuildOptions]
 OnlyBuildSelected=False
 OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
+[LandscapeEdit]
+BrushRadius=354.038940
+AlphaBrushAutoRotate=True
+WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
+WorldSpacePatternBrushSettings.bCenterTextureOnOrigin=False
+WorldSpacePatternBrushSettings.RepeatSize=3200.000000
+bUseFlattenTarget=False
+FlattenTarget=0.000000
+TerraceSmooth=0.000100
+TerraceInterval=1.000000
+RampWidth=2000.000000
+RampSideFalloff=0.400000
+bCombinedLayersOperation=True
+SmoothFilterKernelSize=4
+MirrorOp=0
+NewLandscapeMaterialName=/Game/StarterContent/Materials/M_CobbleStone_Smooth.M_CobbleStone_Smooth
+ImportLandscape_AlphamapType=0
+ShowUnusedLayers=True
+
 [DetailCustomWidgetExpansion]
+LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
-MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
+MaterialInstanceConstant=
+
+[ContentBrowser]
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Scripts/FlickeringLight_BP.FlickeringLight_BP
-OpenAssetsAtExit=/Game/Assets/LampPost/metal.metal
-OpenAssetsAtExit=/Game/Assets/LampPost/StreetLamp.StreetLamp
-OpenAssetsAtExit=/Game/Assets/LampPost/glass.glass
-OpenAssetsAtExit=/Game/Assets/LampPost/GlassGlow.GlassGlow
-OpenAssetsAtExit=/Game/Assets/ParkBench/Steel.Steel
-OpenAssetsAtExit=/Game/Assets/ParkBench/ParkBench.ParkBench
-OpenAssetsAtExit=/Game/Assets/ParkBench/woods.woods
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonHUD.FirstPersonHUD
+OpenAssetsAtExit=/Game/Materials/Cobblestone.Cobblestone
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
 StaticMeshActor.StaticMesh=True
 StaticMeshActor.Materials=True
-StaticMeshActor.Physics=True
+StaticMeshActor.Physics=False
 StaticMeshActor.Collision=True
 StaticMeshActor.Lighting=True
 StaticMeshActor.Rendering=True
@@ -428,26 +448,99 @@ FirstPersonHUD_C.Tick=True
 FirstPersonHUD_C.Default=True
 FirstPersonHUD_C.HUD=True
 FirstPersonHUD_C.Collision=True
+LandscapeEditorObject.New Landscape=True
+LandscapeEditorObject.Brush Settings=True
+LandscapeEditorObject.Tool Settings=True
+LandscapeEditorObject.Target Layers=True
+MeshPaintModeSettings.Visualization=True
+LandscapeGizmoActiveActor.TransformCommon=True
+LandscapeGizmoActiveActor.LandscapeGizmoActiveActor=True
+LandscapeGizmoActiveActor.Gizmo=True
+LandscapeGizmoActiveActor.Rendering=True
+LandscapeGizmoActiveActor.Replication=True
+LandscapeGizmoActiveActor.Collision=True
+LandscapeGizmoActiveActor.Input=True
+LandscapeGizmoActiveActor.Actor=True
+MeshColorPaintingToolProperties.Brush=True
+MeshColorPaintingToolProperties.VertexPainting=True
+MeshColorPaintingToolProperties.ColorPainting=True
+Landscape.TransformCommon=True
+Landscape.Information=True
+Landscape.LOD=True
+Landscape.Landscape=True
+Landscape.LOD Distribution=True
+Landscape.Tessellation=True
+Landscape.Lighting=True
+Landscape.VirtualTexture=True
+Landscape.Rendering=True
+Landscape.Lightmass=True
+Landscape.Collision=True
+Landscape.HierarchicalLOD=True
+Landscape.Replication=True
+Landscape.Input=True
+Landscape.Actor=True
+MaterialExpressionVertexColor.MaterialExpression=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+MaterialExpressionLinearInterpolate.MaterialExpressionLinearInterpolate=True
+MaterialExpressionLinearInterpolate.MaterialExpression=True
+MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
+MaterialExpressionTextureCoordinate.MaterialExpression=True
+MaterialExpression.MaterialExpression=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.Cooking=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
-MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem2=/Game/Assets/ParkBench/woods
-MRUItem3=/Game/Assets/ParkBench/uploads_files_839016_OutdoorParkBenches_1_
-MRUItem4=/Game/Assets/ParkBench/Steel
-MRUItem5=/Game/Assets/LampPost/GlassGlow
-MRUItem6=/Game/Assets/LampPost/glass
-MRUItem7=/Game/Assets/LampPost/uploads_files_1914280_street+lamp
-MRUItem8=/Game/Assets/LampPost/metal
-MRUItem9=/Game/Scripts/FlickeringLight_BP
+MRUItem0=/Game/Materials/Cobblestone
+MRUItem1=/Game/Materials/Grass
+MRUItem2=/Game/StarterContent/Materials/M_Ground_Grass
+MRUItem3=/Game/Materials/VertexPainting_MAT
+MRUItem4=/Game/StarterContent/Materials/M_CobbleStone_Smooth
+MRUItem5=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
+MRUItem6=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem7=/Game/Assets/ParkBench/woods
+MRUItem8=/Game/Assets/ParkBench/uploads_files_839016_OutdoorParkBenches_1_
+MRUItem9=/Game/Assets/ParkBench/Steel
+MRUItem10=/Game/Assets/LampPost/GlassGlow
+MRUItem11=/Game/Assets/LampPost/glass
+MRUItem12=/Game/Assets/LampPost/uploads_files_1914280_street+lamp
+MRUItem13=/Game/Assets/LampPost/metal
+MRUItem14=/Game/Scripts/FlickeringLight_BP
 
 [AssetEditorToolkitTabLocation]
 /Game/Scripts/FlickeringLight_BP.FlickeringLight_BP=1
+/Game/StarterContent/Materials/M_CobbleStone_Smooth.M_CobbleStone_Smooth=1
+/Game/Assets/LampPost/metal.metal=1
+/Game/Assets/LampPost/StreetLamp.StreetLamp=1
+/Game/Assets/LampPost/glass.glass=1
+/Game/Assets/LampPost/GlassGlow.GlassGlow=1
+/Game/Assets/ParkBench/Steel.Steel=1
+/Game/Assets/ParkBench/ParkBench.ParkBench=1
+/Game/Assets/ParkBench/woods.woods=1
+/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
+/Game/FirstPersonBP/Blueprints/FirstPersonHUD.FirstPersonHUD=1
+/Game/Materials/VertexPainting_MAT.VertexPainting_MAT=1
+/Game/StarterContent/Materials/M_Ground_Grass.M_Ground_Grass=1
+/Game/Materials/Grass.Grass=1
+/Game/Materials/Cobblestone.Cobblestone=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Grass.M_Ground_Grass;
+RecentlyPlaced=/Game/Materials/VertexPainting_MAT.VertexPainting_MAT;
+RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Smooth.M_CobbleStone_Smooth;
 RecentlyPlaced=/Game/Assets/ParkBench/ParkBench.ParkBench;
 RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_6
 RecentlyPlaced=/Script/Engine.LevelBounds;
@@ -457,7 +550,7 @@ RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactor
 RecentlyPlaced=/Game/Scripts/FlickeringLight_BP.FlickeringLight_BP;
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=LightingResults
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
@@ -467,9 +560,18 @@ PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+MeshColorPaintingToolProperties="\"Object.VertexPainting.VertexPainting|Visualization\" "
+MeshVertexPaintingToolProperties="\"Object.VertexPainting.VertexPainting|Visualization\" "
+BrushBaseProperties="\"Object.VertexPainting.VertexPainting|Visualization\" "
+InteractiveToolPropertySet="\"Object.VertexPainting.VertexPainting|Visualization\" "
+Object=
+ExponentialHeightFog="\"Object.ExponentialHeightFog.Component.Object.FogInscatteringColor\" \"Object.ExponentialHeightFog.Component.Object.InscatteringTextureTint\" \"Object.ExponentialHeightFog.Component.Object.VolumetricFogAlbedo\" \"Object.ExponentialHeightFog.Component.Object.VolumetricFogEmissive\" "
+Info="\"Object.ExponentialHeightFog.Component.Object.FogInscatteringColor\" \"Object.ExponentialHeightFog.Component.Object.InscatteringTextureTint\" \"Object.ExponentialHeightFog.Component.Object.VolumetricFogAlbedo\" \"Object.ExponentialHeightFog.Component.Object.VolumetricFogEmissive\" "
 
 [DetailCategoriesAdvanced]
 FbxImportUI.Mesh=True
+MeshColorPaintingToolProperties.Brush=True
+StaticMeshActor.Materials=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -585,4 +687,66 @@ StaticMeshEditorViewport.LayoutType=OnePane
 
 [SelectionDetails]
 PreserveScaleRatio=False
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+
+[MaterialInstanceEditor]
+bShowGrid=True
+bDrawGrid=False
+PrimType=1
 
