Saved and built lighting

--- a/ColorAndLight/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ColorAndLight/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -74,7 +74,6 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [/Script/UnrealEd.MaterialEditorOptions]
-bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
@@ -110,13 +109,18 @@ MaterialInstanceConstant=
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
+GlobalAssetPicker.ActiveTypeFilters=
+GlobalAssetPicker.EnabledTypeFilters=
+GlobalAssetPicker.ActiveFrontendFilters=
+GlobalAssetPicker.EnabledFrontendFilters=
+GlobalAssetPicker.ThumbnailSizeScale=0.100000
+GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Materials/Cobblestone.Cobblestone
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -500,21 +504,21 @@ StaticMeshComponent.Tags=True
 StaticMeshComponent.Cooking=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/Cobblestone
-MRUItem1=/Game/Materials/Grass
-MRUItem2=/Game/StarterContent/Materials/M_Ground_Grass
-MRUItem3=/Game/Materials/VertexPainting_MAT
-MRUItem4=/Game/StarterContent/Materials/M_CobbleStone_Smooth
-MRUItem5=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
-MRUItem6=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem7=/Game/Assets/ParkBench/woods
-MRUItem8=/Game/Assets/ParkBench/uploads_files_839016_OutdoorParkBenches_1_
-MRUItem9=/Game/Assets/ParkBench/Steel
-MRUItem10=/Game/Assets/LampPost/GlassGlow
-MRUItem11=/Game/Assets/LampPost/glass
-MRUItem12=/Game/Assets/LampPost/uploads_files_1914280_street+lamp
-MRUItem13=/Game/Assets/LampPost/metal
-MRUItem14=/Game/Scripts/FlickeringLight_BP
+MRUItem0=/Game/Scripts/FlickeringLight_BP
+MRUItem1=/Game/Materials/Cobblestone
+MRUItem2=/Game/Materials/Grass
+MRUItem3=/Game/StarterContent/Materials/M_Ground_Grass
+MRUItem4=/Game/Materials/VertexPainting_MAT
+MRUItem5=/Game/StarterContent/Materials/M_CobbleStone_Smooth
+MRUItem6=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
+MRUItem7=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem8=/Game/Assets/ParkBench/woods
+MRUItem9=/Game/Assets/ParkBench/uploads_files_839016_OutdoorParkBenches_1_
+MRUItem10=/Game/Assets/ParkBench/Steel
+MRUItem11=/Game/Assets/LampPost/GlassGlow
+MRUItem12=/Game/Assets/LampPost/glass
+MRUItem13=/Game/Assets/LampPost/uploads_files_1914280_street+lamp
+MRUItem14=/Game/Assets/LampPost/metal
 
 [AssetEditorToolkitTabLocation]
 /Game/Scripts/FlickeringLight_BP.FlickeringLight_BP=1
@@ -537,6 +541,7 @@ MRUItem14=/Game/Scripts/FlickeringLight_BP
 bHideUnrelatedNodes=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Assets/BigBen/St_Stephen_s_Tower__Big_Ben___London.St_Stephen_s_Tower__Big_Ben___London;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Grass.M_Ground_Grass;
 RecentlyPlaced=/Game/Materials/VertexPainting_MAT.VertexPainting_MAT;
@@ -550,7 +555,7 @@ RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactor
 RecentlyPlaced=/Game/Scripts/FlickeringLight_BP.FlickeringLight_BP;
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=FBXImport
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
