Added trees to either side of the path

--- a/ColorAndLight/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ColorAndLight/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -606,26 +606,26 @@ SoundNodeWavePlayer.WavePlayer=True
 SoundNodeRandom.Random=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Braodleaf/uploads_files_1970948_broadleaf_hero_field
-MRUItem1=/Game/Assets/Braodleaf/Broadleaf_Hero_Field_Leaf_Mat
-MRUItem2=/Game/Assets/Braodleaf/Main_Bark_Branch_Mat
-MRUItem3=/Game/Assets/Braodleaf/Shell_Bark_Branch_Mat
-MRUItem4=/Game/Assets/Braodleaf/Broadleaf_Hero_Field_Branch_Mat
-MRUItem5=/Game/Audio/Whispers
-MRUItem6=/Game/Audio/193816__geoneo0__four-voices-whispering-3-wecho_Cue
-MRUItem7=/Game/Audio/193816__geoneo0__four-voices-whispering-3-wecho
-MRUItem8=/Game/Scripts/FlickeringLight_BP
-MRUItem9=/Game/Materials/Cobblestone
-MRUItem10=/Game/Materials/Grass
-MRUItem11=/Game/StarterContent/Materials/M_Ground_Grass
-MRUItem12=/Game/Materials/VertexPainting_MAT
-MRUItem13=/Game/StarterContent/Materials/M_CobbleStone_Smooth
-MRUItem14=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
-MRUItem15=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem16=/Game/Assets/ParkBench/woods
-MRUItem17=/Game/Assets/ParkBench/uploads_files_839016_OutdoorParkBenches_1_
-MRUItem18=/Game/Assets/ParkBench/Steel
-MRUItem19=/Game/Assets/LampPost/GlassGlow
+MRUItem0=/Game/Assets/MapleTree/Material__259
+MRUItem1=/Game/Assets/MapleTree/Material__261
+MRUItem2=/Game/Assets/MapleTree/Material__260
+MRUItem3=/Game/Assets/MapleTree/Material__256
+MRUItem4=/Game/Assets/MapleTree/Material__255
+MRUItem5=/Game/Assets/MapleTree/Material__252
+MRUItem6=/Game/Assets/MapleTree/Material__251
+MRUItem7=/Game/Assets/MapleTree/Material__250
+MRUItem8=/Game/Assets/MapleTree/tgorecfs_Yew_Bark_1x2_M
+MRUItem9=/Game/Assets/MapleTree/uploads_files_2201839_Maple+Tree+002
+MRUItem10=/Game/Assets/Braodleaf/uploads_files_1970948_broadleaf_hero_field
+MRUItem11=/Game/Assets/Braodleaf/Broadleaf_Hero_Field_Leaf_Mat
+MRUItem12=/Game/Assets/Braodleaf/Main_Bark_Branch_Mat
+MRUItem13=/Game/Assets/Braodleaf/Shell_Bark_Branch_Mat
+MRUItem14=/Game/Assets/Braodleaf/Broadleaf_Hero_Field_Branch_Mat
+MRUItem15=/Game/Audio/Whispers
+MRUItem16=/Game/Audio/193816__geoneo0__four-voices-whispering-3-wecho_Cue
+MRUItem17=/Game/Audio/193816__geoneo0__four-voices-whispering-3-wecho
+MRUItem18=/Game/Scripts/FlickeringLight_BP
+MRUItem19=/Game/Materials/Cobblestone
 
 [AssetEditorToolkitTabLocation]
 /Game/Scripts/FlickeringLight_BP.FlickeringLight_BP=1
@@ -652,11 +652,22 @@ MRUItem19=/Game/Assets/LampPost/GlassGlow
 /Game/Assets/Braodleaf/Broadleaf_Hero_Field_Leaf_Mat.Broadleaf_Hero_Field_Leaf_Mat=1
 /Game/Assets/Braodleaf/Broadleaf_Hero_Field_Branch_Mat.Broadleaf_Hero_Field_Branch_Mat=1
 /Game/Assets/Braodleaf/uploads_files_1970948_broadleaf_hero_field.uploads_files_1970948_broadleaf_hero_field=1
+/Game/Assets/MapleTree/Material__261.Material__261=1
+/Game/Assets/MapleTree/Material__260.Material__260=1
+/Game/Assets/MapleTree/Material__259.Material__259=1
+/Game/Assets/MapleTree/Material__256.Material__256=1
+/Game/Assets/MapleTree/Material__255.Material__255=1
+/Game/Assets/MapleTree/Material__252.Material__252=1
+/Game/Assets/MapleTree/Material__251.Material__251=1
+/Game/Assets/MapleTree/Material__250.Material__250=1
+/Game/Assets/MapleTree/tgorecfs_Yew_Bark_1x2_M.tgorecfs_Yew_Bark_1x2_M=1
+/Game/Assets/MapleTree/uploads_files_2201839_Maple+Tree+002.uploads_files_2201839_Maple+Tree+002=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Assets/MapleTree/uploads_files_2201839_Maple+Tree+002.uploads_files_2201839_Maple+Tree+002;
 RecentlyPlaced=/Game/Assets/Braodleaf/uploads_files_1970948_broadleaf_hero_field.uploads_files_1970948_broadleaf_hero_field;
 RecentlyPlaced=/Game/Audio/Whispers.Whispers;
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
@@ -682,8 +693,8 @@ DeleteVariableInUse_Warning=False
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 MeshColorPaintingToolProperties="\"Object.VertexPainting.VertexPainting|Visualization\" "
 MeshVertexPaintingToolProperties="\"Object.VertexPainting.VertexPainting|Visualization\" "
@@ -811,7 +822,7 @@ bConvertSceneUnit=False
 StaticMeshEditorViewport.LayoutType=OnePane
 
 [SelectionDetails]
-PreserveScaleRatio=False
+PreserveScaleRatio=True
 
 [MaterialEditor]
 PrimType=1
